src/tui/app/snapshots/revu__tui__app__tests__review_progress.snap
---
source: src/tui/app/tests.rs
expression: screen
---
╭ Queue · all ─────────────────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ───────────────────── ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ success                                                  │
│ ▎ feat charge cards at checkout          ││   1 of 2 approvals · 3 threads, 1 unresolved · viewed 1/2 ━━━━━─────                                             │
│ ▎ omar · !42 · 1/9 · +412 −38         2h ││  ◆ 1 on the MR  enter opens                                                                                      │
│                                          ││                                                                                                                  │
│   ── MINE · 1 ────────────────────────── ││ ▎▸ src/pay/charge.rs                                                              +4 −2  ✓1 · 1 outdated  viewed │
│   fix flaky cache test                 D ││                                                                                                                  │
│   nina · !41 · 1/1 · +3 −1            4h ││  ▸ Cargo.lock                                                                                      +1 −1  folded │
│                                          ││                                                                                                                  │
│   ── WATCHING · 1 ────────────────────── ││                                                                                                                  │
│   infra: new runner                    ⠋ ││                                                                                                                  │
│   omar · !35 · +0 −0                  2d ││                                                                                                                  │
│                                          ││                                                                                                                  │
│   ── ▸ DONE · 1 ──────────────────────── ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
│                                          ││                                                                                                                  │
╰──────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                                                                                        ? help
