src/tui/app/snapshots/revu__tui__app__tests__review_side_by_side_narrow.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 18)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────╮
│   ── TO REVIEW · 1 ─────────── ││  omar · feat/checkout → main · 2h · +2 −2 · 1 files · ✓ succes │
│ ▎ feat charge cards at ch…     ││   1 of 2 approvals · 1 threads, 1 unresolved                   │
│ ▎ omar · !42 · +412 −38     2h ││                                                                │
│                                ││                                                                │
│   ── MINE · 1 ──────────────── ││ ▎▾ src/sum.rs                                        +2 −2  ◆1 │
│   fix flaky cache test       D ││     ▾ @@ -1,6 +1,6 @@ fn main                                  │
│   nina · !41 · +3 −1        4h ││       1    1  fn main() {                                      │
│                                ││       2    2      let a = 1;                                   │
│   ── WATCHING · 1 ──────────── ││  ◆    3    3 ~    let b = 2;20;                                │
│   infra: new runner          ⠋ ││       4    4      println!("{}", a + b);                       │
│   omar · !35 · +0 −0        2d ││       5      -    let d = 4;                                   │
│                                ││            5 +    println!("{}", c);                           │
│   ── ▸ DONE · 1 ────────────── ││       6    6  }                                                │
│                                ││                                                                │
│                                ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 ✓ side by side needs a wider window                                                         ? help
