src/tui/app/snapshots/revu__tui__app__tests__share_preview.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 120, 24)"
---
╭ Queue · all ───────────────────╮╭ Review ────────────────────────────────────────────────────────────────────────────╮
│   ── TO REVIEW · 1 ─────────── ││                                                                                    │
│ ▎ feat charge cards at ch…     ││                                                                                    │
│ ▎ omar · !42 · +412 −38     2h ││                                                                                    │
│                                ││                                                                                    │
│   ── MINE · 1 ──────────────── ││                                                                                    │
│   fix flaky cache test╭ share !42 to review ─────────────────────────────────────────────────╮                       │
│   nina · !41 · +3 −1  │                                                                      │                       │
│                       │ to `slack send '#review'`                                            │                       │
│   ── WATCHING · 1 ────│ ──────────────────────────────────────────────────────────────────── │                       │
│   infra: new runner   │ [!42 feat: charge cards at                                           │                       │
│   omar · !35 · +0 −0  │ checkout](https://gitlab.com/acme/widgets/-/merge_requests/42)       │                       │
│                       │ _needs a second pair of eyes_                                        │                       │
│   ── ▸ DONE · 1 ──────│ ──────────────────────────────────────────────────────────────────── │                       │
│                       │                                                                      │                       │
│                       ╰ y send · e edit the note · esc cancel ───────────────────────────────╯                       │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
│                                ││                                                                                    │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 gitlab.com · nina                                                                                               ? help
