src/tui/app/snapshots/revu__tui__app__tests__wrapped.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 80, 24)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge ca… ────────╮
│   ── TO REVIEW · 1 ─────────── ││  omar · 2h · +5 −3 · 2 files · ✓ success   │
│ ▎ feat charge cards at chec…   ││   1 of 2 approvals · 3 threads, 1 unresolv │
│ ▎ omar · !42 · +412 −38     2h ││  ◆ 1 on the MR  enter opens                │
│                                ││                                            │
│   ── MINE · 1 ──────────────── ││ ▎▾ src/pay/charge…  +4 −2  ✓1 · 1 outdated │
│   fix flaky cache test       D ││     ▾ @@ -12,4 +12,5 @@ pub async fn ch…   │
│   nina · !41 · +3 −1        4h ││      12   12  pub async fn charge(card: &C │
│                                ││               ard, amount: Money) -> Resul │
│   ── WATCHING · 1 ──────────── ││               t<Receipt> {                 │
│   infra: new runner          ⠋ ││  ✓   13      -    let client = Client::new │
│   omar · !35 · +0 −0        2d ││               ();                          │
│                                ││           13 +    let client = Client::wit │
│   ── ▸ DONE · 1 ────────────── ││               h_key(idempotency_key(card)) │
│                                ││               ;                            │
│                                ││           14 +    let attempt = Attempt::f │
│                                ││               irst();                      │
│                                ││      14   15      let response = client.ch │
│                                ││               arge(amount).await?;         │
│                                ││      15   16      audit::record(&response) │
│                                ││               ;                            │
│                                ││     ▾ @@ -40,3 +41,4 @@ fn idempotency_…   │
╰────────────────────────────────╯╰────────────────────────────────────────────╯
 ✓ long lines wrap                                                       ? help
